After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 744360 - Crash in ephy_embed_shell_setup_web_extensions_connection()
Crash in ephy_embed_shell_setup_web_extensions_connection()
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: General
3.14.x (obsolete)
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-02-11 22:42 UTC by Michael Catanzaro
Modified: 2015-02-12 17:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix crash when we can't connect to the session bus (1.10 KB, patch)
2015-02-11 22:42 UTC, Michael Catanzaro
committed Details | Review

Description Michael Catanzaro 2015-02-11 22:42:28 UTC
If we can't get a bus name, we crash in ephy_embed_shell_setup_web_extensions_connection() trying to report an error message from an uninitialized GError.
Comment 1 Michael Catanzaro 2015-02-11 22:42:50 UTC
Created attachment 296643 [details] [review]
Fix crash when we can't connect to the session bus

This GError is never initialized. g_application_get_dbus_connection()
does not take a GError.
Comment 2 Carlos Garcia Campos 2015-02-12 07:44:08 UTC
Review of attachment 296643 [details] [review]:

Oops, good catch, thanks!
Comment 3 Michael Catanzaro 2015-02-12 17:33:33 UTC
It was caught by ABRT downstream but the reporter marked the bug private so no point in linking to it.

Attachment 296643 [details] pushed as bfdc746 - Fix crash when we can't connect to the session bus