Fix crash when we can't connect to the session bus

This GError is never initialized. g_application_get_dbus_connection()
does not take a GError.

https://bugzilla.gnome.org/show_bug.cgi?id=744360